# axum-react-chat-app

./: Dockerfile
backend/: .gitignore  Cargo.toml  shuttle.db
backend/migration/: Cargo.toml
backend/src/: main.rs  main_docker.rs
backend/src/api/: chat.rs  chat_room.rs  mod.rs  state.rs  user.rs
backend/src/db/: init.rs
backend/src/entities/: chat.rs
