[package]
name = "axum-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-axum = "0.30.1"
shuttle-runtime = { version = "0.30.1", default-features = false }
axum = {version = "0.6.20", features = ["json", "headers", "ws"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
futures-util = "0.3.29"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "0.12.3", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
serde_json = "1.0.107"
serde = "1.0.189"
dotenvy = "0.15.7"
chrono = "0.4.31"
lazy_static = "1.4.0"
sqlx = "0.7.2"
